# Maximeze-

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-android.yml  build-windows.yml  ci.yml
apps/android/: gradlew  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/maximeze/browser/: MainActivity.kt
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
apps/android/app/src/test/java/com/maximeze/browser/: BrowserViewModelTest.kt
apps/android/gradle/: libs.versions.toml
apps/windows/: .eslintrc.json  index.html  package.json  vite.config.ts
apps/windows/src/: App.module.css  App.tsx  main.tsx
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/icons/: icon.icns
apps/windows/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
apps/windows/src/__tests__/: browserStore.test.ts
apps/windows/src/components/: NewTabPage.module.css  NewTabPage.tsx  Omnibox.module.css  Omnibox.tsx  Sidebar.module.css  Sidebar.tsx  TabBar.module.css  TabBar.tsx  Toolbar.module.css  Toolbar.tsx  WebContent.module.css  WebContent.tsx
apps/windows/src/store/: browserStore.ts
apps/windows/src/styles/: global.css
docs/: architecture.md
docs/adr/: 001-tauri-vs-electron.md  002-android-webview-vs-geckoview.md
(+11 files in other folders)
