[package]
name = "maximeze"
version = "0.1.0"
description = "Maximeze Browser"
authors = ["Maximeze Contributors"]
license = "MIT"
repository = "https://github.com/ignatkinm00-afk/Maximeze-"
edition = "2021"
rust-version = "1.77"

[lib]
name = "maximeze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "maximeze"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
